[gd_scene load_steps=10 format=3 uid="uid://pc0tu2if1i0f"]

[ext_resource type="Script" uid="uid://b5d6oo25t7k42" path="res://scripts/build_hand_level.gd" id="1_3efjt"]
[ext_resource type="Script" uid="uid://qmuvmhb7i201" path="res://scripts/tape_counter.gd" id="5_6lf41"]
[ext_resource type="Texture2D" uid="uid://ddvc7m7c441qh" path="res://images/items/small/Item-2.png" id="5_lwwhj"]
[ext_resource type="Texture2D" uid="uid://uhkexvwenae1" path="res://images/hud/Empty_Pasek_Biay.png" id="6_lwwhj"]
[ext_resource type="Texture2D" uid="uid://bqo5xqe42fy3e" path="res://images/hud/Full_Pasek_Czerwony.png" id="7_mynug"]
[ext_resource type="Texture2D" uid="uid://tbk3r7411vmf" path="res://images/hud/exit.png" id="8_lwwhj"]
[ext_resource type="Texture2D" uid="uid://cemk4inpfa52n" path="res://images/hud/Full_Pasek_Niebieski.png" id="8_mrgcu"]
[ext_resource type="Texture2D" uid="uid://sqkevbgbl2k4" path="res://images/stol.png" id="9_mrgcu"]
[ext_resource type="Script" uid="uid://bnjxk2h722gup" path="res://scripts/continue_button.gd" id="9_mynug"]

[node name="BuildHandLevel" type="Node2D"]
script = ExtResource("1_3efjt")

[node name="Items" type="Node" parent="."]

[node name="TapeCounter" type="NinePatchRect" parent="."]
offset_left = 45.0
offset_top = 35.0
offset_right = 85.0
offset_bottom = 75.0
scale = Vector2(6.15, 2.5)
script = ExtResource("5_6lf41")

[node name="Label" type="Label" parent="TapeCounter"]
layout_mode = 0
offset_left = 2.63359
offset_right = 18.6336
offset_bottom = 23.0
scale = Vector2(0.678065, 1.43574)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "5"

[node name="TextureRect" type="TextureRect" parent="TapeCounter"]
layout_mode = 0
offset_left = -0.975608
offset_top = -8.4
offset_right = 127.024
offset_bottom = 119.6
scale = Vector2(0.365619, 0.425572)
texture = ExtResource("5_lwwhj")

[node name="Durability" type="NinePatchRect" parent="."]
offset_left = 1600.0
offset_top = 35.0
offset_right = 1640.0
offset_bottom = 75.0
scale = Vector2(6, 2.5)

[node name="DurabilityLabel" type="Label" parent="Durability"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -38.1704
offset_top = 6.8
offset_right = 38.8296
offset_bottom = 55.8
grow_horizontal = 0
scale = Vector2(0.209242, 0.475948)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Durability"
horizontal_alignment = 1

[node name="DurabilityBar" type="HBoxContainer" parent="Durability"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 0.333334
offset_top = 14.0
offset_right = 130.334
offset_bottom = 103.0
grow_horizontal = 2
scale = Vector2(0.145831, 0.362391)

[node name="TextureProgressBar" type="TextureProgressBar" parent="Durability/DurabilityBar"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("6_lwwhj")
texture_progress = ExtResource("7_mynug")

[node name="Length" type="NinePatchRect" parent="."]
offset_left = 1034.0
offset_top = 37.0
offset_right = 1105.0
offset_bottom = 89.0
scale = Vector2(6, 2.5)

[node name="LengthBar" type="HBoxContainer" parent="Length"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.5
offset_top = -14.0
offset_right = 151.5
offset_bottom = 75.0
grow_vertical = 2
scale = Vector2(0.147827, 0.38655)

[node name="TextureProgressBar" type="TextureProgressBar" parent="Length/LengthBar"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("6_lwwhj")
texture_progress = ExtResource("8_mrgcu")

[node name="LengthLabel" type="Label" parent="Length"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -71.8333
offset_top = -20.4
offset_right = 5.16666
offset_bottom = 28.6
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.209242, 0.475948)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Length"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 1518.0
offset_top = 939.0
offset_right = 1826.0
offset_bottom = 1046.0
icon = ExtResource("8_lwwhj")
script = ExtResource("9_mynug")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(960, 540)
scale = Vector2(8.20513, 8.18182)
texture = ExtResource("9_mrgcu")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
